--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Rest Countries",
-  "name": "Rest Countries Front-End Kanon Gaming Assignment",
+  "short_name": "Kanon Gaming Assignment",
+  "name": "Front-End Kanon Gaming Assignment",
   "icons": [
     {
       "src": "favicon.ico",
