--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "client",
+  "name": "kanon-gaming-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@mantine/core": "^5.4.1",
     "@mantine/hooks": "^5.4.1",
+    "@mantine/prism": "^5.4.1",
     "@reduxjs/toolkit": "^1.8.5",
     "@tabler/icons": "^1.101.0",
     "@testing-library/jest-dom": "^5.16.5",
