--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "kanon-gaming-client",
+  "homepage": "http://wes337.github.io/kanon-gaming-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,11 +24,16 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3"
   },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
