--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "typescript": "^4.8.3"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "eslint": "^8.24.0",
+    "eslint-plugin-react": "^7.31.8",
     "gh-pages": "^4.0.0"
   },
   "scripts": {
